--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.5.4</version>
+		<version>2.2.2.RELEASE</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.lasilveira</groupId>
@@ -13,95 +13,66 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<name>password-validation-api</name>
 	<description>API for password validation</description>
+	<packaging>jar</packaging>
+
 	<properties>
 		<java.version>11</java.version>
 	</properties>
+
 	<dependencies>
+		<!-- web -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
+			<exclusions>
+				<exclusion>
+					<groupId>org.springframework.boot</groupId>
+					<artifactId>spring-boot-starter-tomcat</artifactId>
+				</exclusion>
+			</exclusions>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-undertow</artifactId>
 		</dependency>
 
+		<!-- commons -->
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-lang3</artifactId>
+		</dependency>
+
+		<!-- lombok  -->
 		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
-			<optional>true</optional>
+			<scope>provided</scope>
 		</dependency>
+
+		<!-- testing -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
-		<dependency>
-		    <groupId>org.json</groupId>
-		    <artifactId>json</artifactId>
-		    <version>20180130</version>
-		</dependency>
+
 	</dependencies>
 
 	<build>
 		<plugins>
+			<!-- maven source/javadoc -->
+			<plugin>
+				<artifactId>maven-source-plugin</artifactId>
+			</plugin>
+			<plugin>
+				<artifactId>maven-javadoc-plugin</artifactId>
+			</plugin>
+
+			<!-- spring boot -->
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
-				<configuration>
-					<excludes>
-						<exclude>
-							<groupId>org.projectlombok</groupId>
-							<artifactId>lombok</artifactId>
-						</exclude>
-					</excludes>
-				</configuration>
 			</plugin>
-			
-			<plugin>
-		       <groupId>org.apache.maven.plugins</groupId>
-		       <artifactId>maven-failsafe-plugin</artifactId>
-		       <configuration>
-		          <trimStackTrace>false</trimStackTrace>
-		       </configuration>
-		       <executions>
-		          <execution>
-		            <goals>
-		               <goal>integration-test</goal>
-		            </goals>
-		          </execution>
-		       </executions>
-		    </plugin>
-		    
-		    <plugin>
-		       <groupId>org.codehaus.mojo</groupId>
-		       <artifactId>build-helper-maven-plugin</artifactId>
-		       <executions>
-		         <execution>
-		           <id>add-integration-test-sources</id>
-		           <phase>generate-test-sources</phase>
-		           <goals>
-		             <goal>add-test-source</goal>
-		           </goals>
-		           <configuration>
-		             <sources>
-		                <source>src/it/java</source>
-		             </sources>
-		          </configuration>
-		         </execution>
-		         <execution>
-		           <id>add-integration-test-resources</id>
-		           <phase>generate-test-resources</phase>
-		           <goals>
-		             <goal>add-test-resource</goal>
-		           </goals>
-		           <configuration>
-		             <resources>
-		               <resource>
-		                 <directory>src/it/resources</directory>
-		               </resource>
-		             </resources>
-		           </configuration>
-		         </execution>
-		      </executions>
-		   </plugin>
-	    
 		</plugins>
 	</build>
 
